--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    dependencies {
+        //추가
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.11'
@@ -17,6 +24,9 @@ configurations {
 repositories {
     mavenCentral()
 }
+
+//Spring Boot Overriding
+ext['hibernate.version'] = '5.2.11.Final' //추가
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
